--- a/karamozi/style.css
+++ b/karamozi/style.css
@@ -1,113 +1,158 @@
 @font-face {
-    font-family: 'iran-san';
-   
-    src: url('fonts/IRANSansX-Regular.ttf') ;
+  font-family: "iran-san";
+
+  src: url("fonts/IRANSansX-Regular.ttf");
 }
 
-body{
-    font-family: 'iran-sans';
-    text-align: right;
-    direction: rtl;
-    
-
+body {
+  font-family: "iran-sans";
+  text-align: right;
+  direction: rtl;
 }
 a:link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:visited {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:active {
-    text-decoration: none;
+  text-decoration: none;
 }
-.slide1_home{
-    background-color: #dee0f2;
-    margin:30px 15px;
-    padding: 30px;
-    border-radius: 30px;
+.slide1_home {
+  background-color: #dee0f2;
+  margin: 30px 15px;
+  padding: 30px;
+  border-radius: 30px;
+}
+.box_menu {
+  text-align: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color:black;
+  font-size: 15px;
+  margin-top: 5px;
+}
+.box_menu li {
+  display: inline-block;
+  margin: 0 15px;
+}
+.btn_chat {
+  font-weight: 900;
+  font-size: 15px;
+  padding: 8px 25px;
+  color: #fff;
+  background-color: #6640f4;
+  border-radius: 30px;
+  display: inline-block;
+  transition: 0.5s;
+}
+.btn_chat:hover {
+  background-color: #4a00e1;
+}
+.up_title_slide1 {
+  text-align: center;
+  color: #666;
+  font-size: 18px;
+  margin: 70px 0 20px;
+}
+.title_slide1 {
+  text-align: center;
+}
+.title_slide1 h2 {
+  font-size: 65px;
+  line-height: 65px;
+  padding: 0 13%;
+}
+.startup {
+  background-image: url(img/shap_style_6.png);
+  background-repeat: no-repeat;
+  display: inline-block;
+  background-position: center;
+  padding: 24px 19px;
+  background-size: contain;
+  color: #fff;
+  font-weight: bold;
+  margin-top: 22px;
+}
+
+.desc_slide1 {
+  padding: 0 24%;
+  text-align: center;
+  font-size: 14px;
+  margin: 40px 0 10px;
+}
+
+.box-form {
+  margin: 70px auto 20px;
+  width: 70%;
+  background-color: #fff;
+  border-radius: 50px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+.box_form_btn button {
+  font-weight: 900;
+  font-size: 15px;
+  padding: 8px 25px;
+  color: #fff;
+  background-color: #6640f4;
+  border-radius: 30px;
+
+  transition: 0.5s;
+  border: none;
+  height: 40px;
+  float: left;
+}
+.box_form_btn button:hover {
+  background-color: #4a00e1;
+}
+
+input:focus-visible {
+  outline: none !important;
+}
+.box_form_slide1 input {
+  border: none;
+  outline: none;
+  height: 25px;
+  margin: 5px 0 0 ;
 
 }
-.box_menu{
-    text-align: center;
-    list-style: none;
-    margin: 0;
+.form-box-one  {
+  border-right: 1px solid #949292;
+  
+  margin: 0 20px 0 ;
+  padding-right: 10px;
+}
+
+.box_form_slide1 i{
+    padding-right: 4px;
+}
+
+.slide2_home{
+    margin: 50px ;
     padding: 0;
 }
-.box_menu li{
-    display: inline-block;
-    margin: 0 15px;
+.box-img-slide2 img{
+    padding: 0 10%;
 }
-.btn_chat{
+.box_form_btn2 button {
     font-weight: 900;
     font-size: 15px;
     padding: 8px 25px;
-    color:#fff;
+    color: #fff;
     background-color: #6640f4;
     border-radius: 30px;
-    display: inline-block;
+  
     transition: 0.5s;
-}
-.btn_chat:hover{
-    background-color:#4a00e1;
-
-}
-.up_title_slide1{
-    text-align: center;
-    color: #666;
-    font-size: 18px;
-    margin: 70px 0 20px;
-
-}
-.title_slide1{
-    
-    text-align: center;
-}
-.title_slide1 h2{
-    font-size: 65px;
-    line-height: 65px;
-    padding: 0 13%;
-}
-.startup{
-    background-image: url(img/shap_style_6.png) ;
-    background-repeat: no-repeat;
-    display: inline-block;
-    background-position: center;
-    padding: 24px 19px;
-    background-size: contain;
-    color:#fff;
-    font-weight: bold; 
-    margin-top: 22px;
-}
-
-.desc_slide1{
-    padding: 0 24%;
-    text-align: center;
-    font-size: 14px;
-    margin: 40px 0 10px;
-}
-
-.box-form{
-     margin:70px  auto 20px;
-     width: 70%;
-     background-color: #fff;
-     border-radius: 50px;
-     display: flex;
-     justify-content: space-between;
-     padding: 20px;
-}
-.box_form_btn{
-    font-weight: 900;
-    font-size: 15px;
-    padding: 8px 25px;
-    color:#fff;
-    background-color: #6640f4;
-    border-radius: 30px;
-    display: inline-block;
-    transition: 0.5s;
-}
+    border: none;
+    height: 40px;
+ 
+  }
